# rust_batch_text_extract

./: .env.example  .gitignore  Cargo.toml  request.json
src/: google_schema.rs  main.rs
