[package]
name = "batch_text_extract"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.15.0", features = ["full"] }
reqwest = "0.11.9"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
gcp_auth = "0.6.1"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
image-base64 = "0.1.0"
loading = "*"